--- a/app/src/main/res/layout/activity_addddmiiiinnn.xml
+++ b/app/src/main/res/layout/activity_addddmiiiinnn.xml
@@ -5,18 +5,20 @@
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/hotelnameback"
+    android:background="@drawable/homegold"
     tools:context=".Addddmiiiinnn">
 
     <TextView
         android:id="@+id/textView40"
         android:layout_width="209dp"
         android:layout_height="81dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="156dp"
+        android:fontFamily="sans-serif-condensed-medium"
         android:text="Welcome"
-        android:textColor="#9C27B0"
+        android:textColor="#161416"
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.559"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,7 +39,7 @@
             android:background="@drawable/button"
             android:onClick="sendMessage"
             android:text="View Messages"
-            android:textColor="@color/white"
+            android:textColor="#080909"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.595"
@@ -52,7 +54,7 @@
             android:background="@drawable/button"
             android:onClick="sendMessage"
             android:text="ADD DETAILS"
-            android:textColor="@color/white"
+            android:textColor="#060707"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.504"
@@ -67,7 +69,7 @@
             android:background="@drawable/button"
             android:onClick="sendMessage"
             android:text="PAYMENT"
-            android:textColor="@color/white"
+            android:textColor="#060707"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
@@ -81,7 +83,7 @@
             android:background="@drawable/button"
             android:onClick="Reserve"
             android:text="Make Reservation"
-            android:textColor="@color/cardview_light_background"
+            android:textColor="#0E0C0C"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
