--- a/app/src/main/res/layout/activity_payment_account.xml
+++ b/app/src/main/res/layout/activity_payment_account.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/myprofile"
+    android:background="@drawable/paymentaccount"
     tools:context=".paymentAccount">
 
     <ImageView
@@ -12,13 +12,14 @@
         android:layout_width="133dp"
         android:layout_height="139dp"
         android:layout_marginTop="92dp"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.543"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/myac"
-        android:contentDescription="TODO" />
+        app:layout_constraintVertical_bias="0.052"
+        app:srcCompat="@drawable/myicon1" />
 
     <TextView
         android:id="@+id/cno"
@@ -42,7 +43,7 @@
         android:textColor="#0A0505"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
+        app:layout_constraintHorizontal_bias="0.585"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
@@ -78,12 +79,12 @@
         android:id="@+id/textView35"
         android:layout_width="224dp"
         android:layout_height="40dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="32dp"
         android:text="@string/welcome_to_paradise_hotel1"
         android:textColor="#996515"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.556"
+        app:layout_constraintHorizontal_bias="0.588"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nd" />
 
@@ -94,7 +95,7 @@
         android:background="@drawable/button"
         android:onClick="pay2"
         android:text="@string/change_your_details1"
-        android:textColor="@color/white"
+        android:textColor="#0A0A0A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.531"
