--- a/app/src/main/res/layout/contactus1.xml
+++ b/app/src/main/res/layout/contactus1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundhome"
+    android:background="@drawable/topwhite"
     tools:context=".contactus1">
 
 
@@ -12,13 +12,13 @@
         android:id="@+id/textView"
         android:layout_width="262dp"
         android:layout_height="62dp"
-        android:fontFamily="sans-serif-black"
         android:layout_marginStart="85dp"
         android:layout_marginTop="92dp"
         android:layout_marginEnd="24dp"
+        android:fontFamily="sans-serif-black"
         android:gravity="center"
         android:text="@string/contact_us"
-        android:textColor="#8B1FF8"
+        android:textColor="#0B0B0C"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -126,7 +126,7 @@
         android:background="@drawable/button"
         android:onClick="sendData"
         android:text="@string/submit"
-        android:textColor="@color/white"
+        android:textColor="#050505"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -141,7 +141,7 @@
         android:background="@drawable/button"
         android:onClick="opencintactus2"
         android:text="Update Message"
-        android:textColor="#FDFFFFFF"
+        android:textColor="#FD070606"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
