--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="Darkblue">#000000</color>
     <color name="white">#F5F9F9</color>
     <color name="light_gray">#E8EBEC</color>
-    <color name="gold">#996515</color>
+    <color name="gold">#E09E1A</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorTransParentwhite">#CCCCCC</color>
     <!--<string name="full_name">Full Name</string>-->
