--- a/app/src/main/res/layout/activity_payment3.xml
+++ b/app/src/main/res/layout/activity_payment3.xml
@@ -10,35 +10,31 @@
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="185dp"
-        android:layout_height="23dp"
-        android:layout_marginStart="24dp"
+        android:layout_width="219dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="16dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="sans-serif"
-        android:text="@string/your_are_not_member"
-        android:textColor="#1B1063"
+        android:text="@string/your_are_a"
+        android:textColor="#080809"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
-        app:layout_constraintVertical_bias="0.833" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="101dp"
-        android:layout_height="25dp"
+        android:layout_width="138dp"
+        android:layout_height="27dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/Register"
-        android:textColor="#996515"
+        android:text="@string/enjoy_our_service"
+        android:textColor="#F7F4F0"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView9"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toEndOf="@+id/textView9" />
 
     <EditText
         android:id="@+id/CnoID"
@@ -121,7 +117,7 @@
         android:background="@drawable/button"
         android:text="Update"
         android:textAllCaps="false"
-        android:textColor="@color/white"
+        android:textColor="#0A0A0A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.533"
         app:layout_constraintStart_toStartOf="parent"
@@ -137,27 +133,11 @@
         android:background="@drawable/button"
         android:text="Delete"
         android:textAllCaps="false"
-        android:textColor="@color/white"
+        android:textColor="#050505"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.533"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Update" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="90dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="40dp"
-        android:text="Need Help?"
-        android:textColor="@color/gold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.527"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
-        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView11"
@@ -209,7 +189,7 @@
         android:layout_height="31dp"
         android:background="@drawable/button"
         android:text="*"
-        android:textColor="@color/white"
+        android:textColor="#0B0C0C"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.957"
@@ -225,7 +205,7 @@
         android:background="@drawable/button"
         android:onClick="ac"
         android:text="my profile"
-        android:textColor="@color/white"
+        android:textColor="#050505"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.539"
         app:layout_constraintStart_toStartOf="parent"
